--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -21,29 +21,56 @@ body {
 	@include box-sizing(border-box);
 }
 
+#standardLevel {
+	display: none;
+}
 
-#main-screen {
+
+#mainscreen {
 	position: absolute;
 	left: 0;
 	top: 0;
 	width: 100%;
 	height: 100%;
 	background-color: #589819;
+	text-align: center;
+	padding: 10px;
+	img {
+		display: inline-block;
+	}
+	.menu-item {
+		padding: 10px;
+		border: 1px solid white;
+		margin: 15px 0 15px 0;
+		color: white;
+		font-size: 20px;
+		text-align: center;
+		@include text-shadow(rgb(0,0,0) 1px 1px 0);
+	}
 }
 
-#standard-level {
+#standardlevel {
+	@include perspective(3000);
+	.level-timer {
+		position: absolute;
+		width: 100%;
+		background-color: #fb9817;
+		left: 0;
+		top: 0;
+		height: 10px;
+	}
 	.question-container {
 		color: white;
 		position: absolute;
 		width: 100%;
-		padding: 20px;
-		display: none;
+		padding: 30px 20px 20px 20px;
 		.question {
 			color: white;
 			text-transform: uppercase;
 			font-size: 40px;
 			text-align: center;
 			@include text-shadow(rgb(0,0,0) 1px 1px 0);
+
 		}
 		.answer {
 			padding: 10px;
@@ -53,6 +80,13 @@ body {
 			font-size: 20px;
 			text-align: center;
 			@include text-shadow(rgb(0,0,0) 1px 1px 0);
+			@include transition(0.25s);
+			&.correct-answer {
+				@include transform(scale(10px));
+			}
+			&.wrong-answer {
+				@include transform(scale(-10px));	
+			}
 		}
 	}
 }
