--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -25,6 +25,19 @@ body {
 	display: none;
 }
 
+#titlefield {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	text-align: center;
+	color: white;
+	font-size: 30px;
+	text-transform: uppercase;
+	background-color: rgba(0,0,0,0.8);
+	display: none;
+	z-index: 1000;
+}
 
 #mainscreen {
 	position: absolute;
@@ -69,17 +82,6 @@ body {
   		overflow-x: hidden;
 		overflow-y: scroll; /* has to be scroll, not auto */
 	  	-webkit-overflow-scrolling: touch;
-	  	.map-title {
-	  		position: fixed;
-	  		top: 0;
-	  		left: 0;
-	  		width: 100%;
-	  		text-align: center;
-	  		color: white;
-	  		font-size: 30px;
-	  		text-transform: uppercase;
-	  		background-color: rgba(0,0,0,0.8);
-	  	}
 	  	.level {
 	  		width: 100%;
 	  		position: relative;
@@ -93,6 +95,18 @@ body {
 	  			margin-left: -5px;
 	  			background-color: #ffd7a2;
 	  		}
+	  		&.selected {
+	  			.level-marker {
+	  				@include transform(scale(9));
+	  				@include transition(0.5s);
+	  			}
+	  			.level-title,
+	  			.level-start-button {
+	  				@include transition(0.5s);
+	  				opacity: 1;
+	  			}
+
+	  		}
 	  		.level-marker {
 	  			position: absolute;
 	  			left: 50%;
@@ -103,15 +117,39 @@ body {
 	  			@include border-radius(50%);
 	  			margin-left: -10px;
 	  			margin-top: -10px;
+	  			@include transition(0.5s);
 	  		}
 	  		.level-title {
 	  			position: absolute;
-	  			display: inline-block;
-	  			bottom: 0;
+	  			display: block;
+	  			top: 50%;
+	  			width: 100%;
+	  			margin-top: 20px;
 	  			left: 0;
 	  			color: white;
-	  			text-align: left;
+	  			text-transform: uppercase;
+	  			text-align: center;
 	  			font-size: 20px;
+	  			opacity: 0;
+	  			@include transition(0.5s);
+	  		}
+	  		.level-start-button {
+	  			position: absolute;
+	  			display: inline-block;
+	  			top: 50%;
+	  			
+	  			margin-left: -70px;
+	  			width: 140px;
+	  			margin-top: 50px;
+	  			padding: 10px 10px;
+	  			background-color: #943fff;
+	  			left: 50%;
+	  			color: white;
+	  			text-transform: uppercase;
+	  			text-align: center;
+	  			font-size: 20px;
+	  			@include transition(0.5s);
+	  			opacity: 0;
 	  		}
 	  	}
   	}
