--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -95,7 +95,22 @@ body {
   display: none;
 }
 
-/* line 29, ../sass/screen.scss */
+/* line 28, ../sass/screen.scss */
+#titlefield {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  text-align: center;
+  color: white;
+  font-size: 30px;
+  text-transform: uppercase;
+  background-color: rgba(0, 0, 0, 0.8);
+  display: none;
+  z-index: 1000;
+}
+
+/* line 42, ../sass/screen.scss */
 #mainscreen {
   position: absolute;
   left: 0;
@@ -106,11 +121,11 @@ body {
   text-align: center;
   padding: 10px;
 }
-/* line 38, ../sass/screen.scss */
+/* line 51, ../sass/screen.scss */
 #mainscreen img {
   display: inline-block;
 }
-/* line 41, ../sass/screen.scss */
+/* line 54, ../sass/screen.scss */
 #mainscreen .menu-item {
   padding: 10px;
   border: 1px solid white;
@@ -121,7 +136,7 @@ body {
   text-shadow: black 1px 1px 0;
 }
 
-/* line 52, ../sass/screen.scss */
+/* line 65, ../sass/screen.scss */
 #mapscreen {
   position: absolute;
   left: 0;
@@ -133,7 +148,7 @@ body {
   overflow: hidden;
   display: none;
 }
-/* line 63, ../sass/screen.scss */
+/* line 76, ../sass/screen.scss */
 #mapscreen .map-screen-container {
   position: absolute;
   left: 0;
@@ -145,24 +160,12 @@ body {
   /* has to be scroll, not auto */
   -webkit-overflow-scrolling: touch;
 }
-/* line 72, ../sass/screen.scss */
-#mapscreen .map-screen-container .map-title {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  text-align: center;
-  color: white;
-  font-size: 30px;
-  text-transform: uppercase;
-  background-color: rgba(0, 0, 0, 0.8);
-}
-/* line 83, ../sass/screen.scss */
+/* line 85, ../sass/screen.scss */
 #mapscreen .map-screen-container .level {
   width: 100%;
   position: relative;
 }
-/* line 86, ../sass/screen.scss */
+/* line 88, ../sass/screen.scss */
 #mapscreen .map-screen-container .level:before {
   content: "";
   position: absolute;
@@ -173,7 +176,27 @@ body {
   margin-left: -5px;
   background-color: #ffd7a2;
 }
-/* line 96, ../sass/screen.scss */
+/* line 99, ../sass/screen.scss */
+#mapscreen .map-screen-container .level.selected .level-marker {
+  -moz-transform: scale(9);
+  -ms-transform: scale(9);
+  -webkit-transform: scale(9);
+  transform: scale(9);
+  -moz-transition: 0.5s;
+  -o-transition: 0.5s;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+/* line 103, ../sass/screen.scss */
+#mapscreen .map-screen-container .level.selected .level-title,
+#mapscreen .map-screen-container .level.selected .level-start-button {
+  -moz-transition: 0.5s;
+  -o-transition: 0.5s;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  opacity: 1;
+}
+/* line 110, ../sass/screen.scss */
 #mapscreen .map-screen-container .level .level-marker {
   position: absolute;
   left: 50%;
@@ -186,25 +209,58 @@ body {
   border-radius: 50%;
   margin-left: -10px;
   margin-top: -10px;
+  -moz-transition: 0.5s;
+  -o-transition: 0.5s;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
-/* line 107, ../sass/screen.scss */
+/* line 122, ../sass/screen.scss */
 #mapscreen .map-screen-container .level .level-title {
   position: absolute;
-  display: inline-block;
-  bottom: 0;
+  display: block;
+  top: 50%;
+  width: 100%;
+  margin-top: 20px;
   left: 0;
   color: white;
-  text-align: left;
+  text-transform: uppercase;
+  text-align: center;
   font-size: 20px;
+  opacity: 0;
+  -moz-transition: 0.5s;
+  -o-transition: 0.5s;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+/* line 136, ../sass/screen.scss */
+#mapscreen .map-screen-container .level .level-start-button {
+  position: absolute;
+  display: inline-block;
+  top: 50%;
+  margin-left: -70px;
+  width: 140px;
+  margin-top: 50px;
+  padding: 10px 10px;
+  background-color: #943fff;
+  left: 50%;
+  color: white;
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 20px;
+  -moz-transition: 0.5s;
+  -o-transition: 0.5s;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  opacity: 0;
 }
 
-/* line 120, ../sass/screen.scss */
+/* line 158, ../sass/screen.scss */
 #standardlevel {
   -moz-perspective: 3000;
   -webkit-perspective: 3000;
   perspective: 3000;
 }
-/* line 122, ../sass/screen.scss */
+/* line 160, ../sass/screen.scss */
 #standardlevel .level-timer {
   position: absolute;
   width: 100%;
@@ -213,14 +269,14 @@ body {
   top: 0;
   height: 10px;
 }
-/* line 130, ../sass/screen.scss */
+/* line 168, ../sass/screen.scss */
 #standardlevel .question-container {
   color: white;
   position: absolute;
   width: 100%;
   padding: 30px 20px 20px 20px;
 }
-/* line 135, ../sass/screen.scss */
+/* line 173, ../sass/screen.scss */
 #standardlevel .question-container .question {
   color: white;
   text-transform: uppercase;
@@ -228,7 +284,7 @@ body {
   text-align: center;
   text-shadow: black 1px 1px 0;
 }
-/* line 143, ../sass/screen.scss */
+/* line 181, ../sass/screen.scss */
 #standardlevel .question-container .answer {
   padding: 10px;
   border: 1px solid white;
@@ -242,14 +298,14 @@ body {
   -webkit-transition: 0.25s;
   transition: 0.25s;
 }
-/* line 152, ../sass/screen.scss */
+/* line 190, ../sass/screen.scss */
 #standardlevel .question-container .answer.correct-answer {
   -moz-transform: scale(10px);
   -ms-transform: scale(10px);
   -webkit-transform: scale(10px);
   transform: scale(10px);
 }
-/* line 155, ../sass/screen.scss */
+/* line 193, ../sass/screen.scss */
 #standardlevel .question-container .answer.wrong-answer {
   -moz-transform: scale(-10px);
   -ms-transform: scale(-10px);
