--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -22,8 +22,18 @@ body {
 	@include box-sizing(border-box);
 }
 
+
+
 #standardLevel {
 	display: none;
+	&.sand {
+		background-image: url(../img/background-desert.jpg);
+		background-size: cover;
+	}
+	&.forest {
+		background-image: url(../img/background-forest.jpg);
+		background-size: cover;
+	}
 }
 
 #titlefield {
@@ -47,6 +57,8 @@ body {
 	width: 100%;
 	height: 100%;
 	background-color: #589819;
+	background-image: url(../img/quiz-quest-splash.jpg);
+	background-size: cover;
 	text-align: center;
 	padding: 10px;
 	img {
@@ -157,36 +169,84 @@ body {
 }
 
 .guysprite {
-	width: 40px;
-	height: 60px;
-	background-color: green;
+	width: 120px;
+	height: 150px;
+	overflow: hidden;
+	background-image: url(../img/run-anim-all-small.png);
+	background-position: left center;
 	position: absolute;
+	left: 0;
+	top: 0;
 	&.standing {
-		bottom: 20px;
+		top: auto;
+		bottom: 12px;
 		left: 10px;
+		background-image: url(../img/morris-gun-standing-anim-small.png);
+		@include animation(playzombie 0.5s steps(6) infinite);
+	}
+	&.running {
+		@include animation(play 0.5s steps(8) infinite);
 	}
 }
+
+
 
 .shotsprite {
 	width: 20px;
 	height: 20px;
 	position: absolute;
 	&.horde {
-		bottom: 30px;
-		left: 50px;
+		bottom: 45px;
+		left: 120px;
 		background-color: black;
+		&.machine-gun {
+			background-image: url(../img/shot-machine-gun.png);
+			background-color: transparent;
+		}
 	}
 }
 
+.pow {
+	position: absolute;
+	left: 0;
+	bottom: 13px;
+	width: 240px;
+	height: 150px;
+	background-image: url(../img/pow-block.png);
+	background-repeat: no-repeat;
+	background-position: left center;
+	z-index: 1000;
+}
+
 .enemysprite {
-	width: 40px;
-	height: 60px;
-	background-color: red;
+	width: 120px;
+	height: 150px;
 	position: absolute;
 	&.walker {
-		bottom: 20px;
+		background-image: url(../img/zombie-anim-small-long.png);
+		background-position: left center;
+		bottom: 13px;
 		left: 100%;
+		@include animation(playzombielong 1s steps(12) infinite);
+		&.shot {
+			background-image: url(../img/zombie-killed.png);
+			-webkit-animation-play-state: paused;
+		 	animation-play-state: paused;
+		}
 	}
+
+}
+
+@include keyframes(play) {
+	100% { background-position: -720px; }
+}
+
+@include keyframes(playzombie) {
+	100% { background-position: -720px; }
+}
+
+@include keyframes(playzombielong) {
+	100% { background-position: -1440px; }
 }
 
 .ground {
@@ -195,8 +255,13 @@ body {
 	height: 20px;
 	bottom: 0;
 	left: 0;
-	&.dirt {
+	&.sand {
 		background-color: #966b10;
+		background-image: url(../img/ground-desert.png);
+	}
+	&.forest {
+		background-color: #966b10;
+		background-image: url(../img/ground-forest.png);
 	}
 }
 
