--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -24,16 +24,13 @@ body {
 
 
 
-#standardLevel {
-	display: none;
-	&.sand {
-		background-image: url(../img/background-desert.jpg);
-		background-size: cover;
-	}
-	&.forest {
-		background-image: url(../img/background-forest.jpg);
-		background-size: cover;
-	}
+#levelContainer {
+	position: absolute;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 50;
 }
 
 #titlefield {
@@ -61,6 +58,7 @@ body {
 	background-size: cover;
 	text-align: center;
 	padding: 10px;
+	z-index: 100;
 	img {
 		display: inline-block;
 	}
@@ -75,202 +73,13 @@ body {
 	}
 }
 
-#mapscreen {
-	position: absolute;
-	left: 0;
-	top: 0;
-	width: 100%;
-	height: 100%;
-	background-color: #fb9817;
-	text-align: center;
-	overflow: hidden;
-	display: none;
-
-  	.map-screen-container {
-  		position: absolute;
-  		left: 0;
-  		top: 0;
-  		width: 100%;
-  		height: 100%;
-  		overflow-x: hidden;
-		overflow-y: scroll; /* has to be scroll, not auto */
-	  	-webkit-overflow-scrolling: touch;
-	  	.level {
-	  		width: 100%;
-	  		position: relative;
-	  		&:before {
-	  			content: "";
-	  			position: absolute;
-	  			width: 10px;
-	  			height: 100%;
-	  			left: 50%;
-	  			top: 0;
-	  			margin-left: -5px;
-	  			background-color: #ffd7a2;
-	  		}
-	  		&.selected {
-	  			.level-marker {
-	  				@include transform(scale(9));
-	  				@include transition(0.5s);
-	  			}
-	  			.level-title,
-	  			.level-start-button {
-	  				@include transition(0.5s);
-	  				opacity: 1;
-	  			}
-
-	  		}
-	  		.level-marker {
-	  			position: absolute;
-	  			left: 50%;
-	  			top: 50%;
-	  			background-color: #fb3109;
-	  			width: 20px;
-	  			height: 20px;
-	  			@include border-radius(50%);
-	  			margin-left: -10px;
-	  			margin-top: -10px;
-	  			@include transition(0.5s);
-	  		}
-	  		.level-title {
-	  			position: absolute;
-	  			display: block;
-	  			top: 50%;
-	  			width: 100%;
-	  			margin-top: 20px;
-	  			left: 0;
-	  			color: white;
-	  			text-transform: uppercase;
-	  			text-align: center;
-	  			font-size: 20px;
-	  			opacity: 0;
-	  			@include transition(0.5s);
-	  		}
-	  		.level-start-button {
-	  			position: absolute;
-	  			display: inline-block;
-	  			top: 50%;
-	  			
-	  			margin-left: -70px;
-	  			width: 140px;
-	  			margin-top: 50px;
-	  			padding: 10px 10px;
-	  			background-color: #943fff;
-	  			left: 50%;
-	  			color: white;
-	  			text-transform: uppercase;
-	  			text-align: center;
-	  			font-size: 20px;
-	  			@include transition(0.5s);
-	  			opacity: 0;
-	  		}
-	  	}
-  	}
-}
-
-.guysprite {
-	width: 120px;
-	height: 150px;
-	overflow: hidden;
-	background-image: url(../img/run-anim-all-small.png);
-	background-position: left center;
-	position: absolute;
-	left: 0;
-	top: 0;
-	&.standing {
-		top: auto;
-		bottom: 12px;
-		left: 10px;
-		background-image: url(../img/morris-gun-standing-anim-small.png);
-		@include animation(playzombie 0.5s steps(6) infinite);
-	}
-	&.running {
-		@include animation(play 0.5s steps(8) infinite);
-	}
-}
-
-
-
-.shotsprite {
-	width: 20px;
-	height: 20px;
-	position: absolute;
-	&.horde {
-		bottom: 45px;
-		left: 120px;
-		background-color: black;
-		&.machine-gun {
-			background-image: url(../img/shot-machine-gun.png);
-			background-color: transparent;
-		}
-	}
-}
-
-.pow {
-	position: absolute;
-	left: 0;
-	bottom: 13px;
-	width: 240px;
-	height: 150px;
-	background-image: url(../img/pow-block.png);
-	background-repeat: no-repeat;
-	background-position: left center;
-	z-index: 1000;
-}
-
-.enemysprite {
-	width: 120px;
-	height: 150px;
-	position: absolute;
-	&.walker {
-		background-image: url(../img/zombie-anim-small-long.png);
-		background-position: left center;
-		bottom: 13px;
-		left: 100%;
-		@include animation(playzombielong 1s steps(12) infinite);
-		&.shot {
-			background-image: url(../img/zombie-killed.png);
-			-webkit-animation-play-state: paused;
-		 	animation-play-state: paused;
-		}
-	}
-
-}
-
-@include keyframes(play) {
-	100% { background-position: -720px; }
-}
-
-@include keyframes(playzombie) {
-	100% { background-position: -720px; }
-}
-
-@include keyframes(playzombielong) {
-	100% { background-position: -1440px; }
-}
-
-.ground {
-	position: absolute;
-	width: 100%;
-	height: 20px;
-	bottom: 0;
-	left: 0;
-	&.sand {
-		background-color: #966b10;
-		background-image: url(../img/ground-desert.png);
-	}
-	&.forest {
-		background-color: #966b10;
-		background-image: url(../img/ground-forest.png);
-	}
-}
-
-#standardlevel {
+#levelContainer {
 	width: 100%;
 	height: 100%;
 	position: absolute;
 	left: 0;
 	top: 0;
+	background-color: black;
 	@include perspective(3000);
 	.level-timer {
 		position: absolute;
@@ -280,7 +89,7 @@ body {
 		top: 0;
 		height: 10px;
 	}
-	.question-container {
+	.questionContainer {
 		color: white;
 		position: absolute;
 		width: 100%;
@@ -293,7 +102,7 @@ body {
 			@include text-shadow(rgb(0,0,0) 1px 1px 0);
 
 		}
-		.answer {
+		.alternative {
 			padding: 10px;
 			border: 1px solid white;
 			margin: 15px 0 15px 0;
@@ -301,12 +110,17 @@ body {
 			font-size: 20px;
 			text-align: center;
 			@include text-shadow(rgb(0,0,0) 1px 1px 0);
-			@include transition(0.25s);
+			@include transition(0.1s);
 			&.correct-answer {
 				@include transform(scale(10px));
+				@include box-shadow(rgba(93,241,42,1) 0 0 30px inset);
 			}
 			&.wrong-answer {
-				@include transform(scale(-10px));	
+				@include transform(scale(-10px));
+				@include box-shadow(rgba(241,42,60,1) 0 0 30px inset);
+			}
+			&.selected {
+				@include box-shadow(rgba(241,215,42,1) 0 0 30px inset);
 			}
 		}
 	}
