--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -2,7 +2,7 @@
  * In this file you should write your main styles. (or centralize your imports)
  * Import this file using the following HTML or equivalent:
  * <link href="/stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" /> */
-/* line 5, ../../../.rbenv/versions/2.2.3/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 5, ../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -24,52 +24,52 @@ time, mark, audio, video {
   vertical-align: baseline;
 }
 
-/* line 22, ../../../.rbenv/versions/2.2.3/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 22, ../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 html {
   line-height: 1;
 }
 
-/* line 24, ../../../.rbenv/versions/2.2.3/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 24, ../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 ol, ul {
   list-style: none;
 }
 
-/* line 26, ../../../.rbenv/versions/2.2.3/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 26, ../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
 
-/* line 28, ../../../.rbenv/versions/2.2.3/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 28, ../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 caption, th, td {
   text-align: left;
   font-weight: normal;
   vertical-align: middle;
 }
 
-/* line 30, ../../../.rbenv/versions/2.2.3/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 30, ../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q, blockquote {
   quotes: none;
 }
-/* line 103, ../../../.rbenv/versions/2.2.3/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 103, ../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 q:before, q:after, blockquote:before, blockquote:after {
   content: "";
   content: none;
 }
 
-/* line 32, ../../../.rbenv/versions/2.2.3/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 32, ../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 a img {
   border: none;
 }
 
-/* line 116, ../../../.rbenv/versions/2.2.3/lib/ruby/gems/2.2.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
+/* line 116, ../../../../../Library/Ruby/Gems/2.0.0/gems/compass-core-1.0.3/stylesheets/compass/reset/_utilities.scss */
 article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
   display: block;
 }
 
 @font-face {
   font-family: "Pixel";
-  src: url('../fonts/pixel.ttf?1450733770') format('truetype');
+  src: url('../fonts/pixel.ttf?1451815560') format('truetype');
 }
 /* line 10, ../sass/screen.scss */
 html, body {
@@ -92,21 +92,16 @@ body {
 }
 
 /* line 27, ../sass/screen.scss */
-#standardLevel {
-  display: none;
-}
-/* line 29, ../sass/screen.scss */
-#standardLevel.sand {
-  background-image: url(../img/background-desert.jpg);
-  background-size: cover;
-}
-/* line 33, ../sass/screen.scss */
-#standardLevel.forest {
-  background-image: url(../img/background-forest.jpg);
-  background-size: cover;
+#levelContainer {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 50;
 }
 
-/* line 39, ../sass/screen.scss */
+/* line 36, ../sass/screen.scss */
 #titlefield {
   position: fixed;
   top: 0;
@@ -121,7 +116,7 @@ body {
   z-index: 1000;
 }
 
-/* line 53, ../sass/screen.scss */
+/* line 50, ../sass/screen.scss */
 #mainscreen {
   position: absolute;
   left: 0;
@@ -133,12 +128,13 @@ body {
   background-size: cover;
   text-align: center;
   padding: 10px;
+  z-index: 100;
 }
-/* line 64, ../sass/screen.scss */
+/* line 62, ../sass/screen.scss */
 #mainscreen img {
   display: inline-block;
 }
-/* line 67, ../sass/screen.scss */
+/* line 65, ../sass/screen.scss */
 #mainscreen .menu-item {
   padding: 10px;
   border: 1px solid white;
@@ -149,283 +145,20 @@ body {
   text-shadow: black 1px 1px 0;
 }
 
-/* line 78, ../sass/screen.scss */
-#mapscreen {
-  position: absolute;
-  left: 0;
-  top: 0;
+/* line 76, ../sass/screen.scss */
+#levelContainer {
   width: 100%;
   height: 100%;
-  background-color: #fb9817;
-  text-align: center;
-  overflow: hidden;
-  display: none;
-}
-/* line 89, ../sass/screen.scss */
-#mapscreen .map-screen-container {
   position: absolute;
   left: 0;
   top: 0;
-  width: 100%;
-  height: 100%;
-  overflow-x: hidden;
-  overflow-y: scroll;
-  /* has to be scroll, not auto */
-  -webkit-overflow-scrolling: touch;
-}
-/* line 98, ../sass/screen.scss */
-#mapscreen .map-screen-container .level {
-  width: 100%;
-  position: relative;
-}
-/* line 101, ../sass/screen.scss */
-#mapscreen .map-screen-container .level:before {
-  content: "";
-  position: absolute;
-  width: 10px;
-  height: 100%;
-  left: 50%;
-  top: 0;
-  margin-left: -5px;
-  background-color: #ffd7a2;
-}
-/* line 112, ../sass/screen.scss */
-#mapscreen .map-screen-container .level.selected .level-marker {
-  -moz-transform: scale(9);
-  -ms-transform: scale(9);
-  -webkit-transform: scale(9);
-  transform: scale(9);
-  -moz-transition: 0.5s;
-  -o-transition: 0.5s;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-}
-/* line 116, ../sass/screen.scss */
-#mapscreen .map-screen-container .level.selected .level-title,
-#mapscreen .map-screen-container .level.selected .level-start-button {
-  -moz-transition: 0.5s;
-  -o-transition: 0.5s;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-  opacity: 1;
-}
-/* line 123, ../sass/screen.scss */
-#mapscreen .map-screen-container .level .level-marker {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  background-color: #fb3109;
-  width: 20px;
-  height: 20px;
-  -moz-border-radius: 50%;
-  -webkit-border-radius: 50%;
-  border-radius: 50%;
-  margin-left: -10px;
-  margin-top: -10px;
-  -moz-transition: 0.5s;
-  -o-transition: 0.5s;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-}
-/* line 135, ../sass/screen.scss */
-#mapscreen .map-screen-container .level .level-title {
-  position: absolute;
-  display: block;
-  top: 50%;
-  width: 100%;
-  margin-top: 20px;
-  left: 0;
-  color: white;
-  text-transform: uppercase;
-  text-align: center;
-  font-size: 20px;
-  opacity: 0;
-  -moz-transition: 0.5s;
-  -o-transition: 0.5s;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-}
-/* line 149, ../sass/screen.scss */
-#mapscreen .map-screen-container .level .level-start-button {
-  position: absolute;
-  display: inline-block;
-  top: 50%;
-  margin-left: -70px;
-  width: 140px;
-  margin-top: 50px;
-  padding: 10px 10px;
-  background-color: #943fff;
-  left: 50%;
-  color: white;
-  text-transform: uppercase;
-  text-align: center;
-  font-size: 20px;
-  -moz-transition: 0.5s;
-  -o-transition: 0.5s;
-  -webkit-transition: 0.5s;
-  transition: 0.5s;
-  opacity: 0;
-}
-
-/* line 171, ../sass/screen.scss */
-.guysprite {
-  width: 120px;
-  height: 150px;
-  overflow: hidden;
-  background-image: url(../img/run-anim-all-small.png);
-  background-position: left center;
-  position: absolute;
-  left: 0;
-  top: 0;
-}
-/* line 180, ../sass/screen.scss */
-.guysprite.standing {
-  top: auto;
-  bottom: 12px;
-  left: 10px;
-  background-image: url(../img/morris-gun-standing-anim-small.png);
-  -moz-animation: playzombie 0.5s steps(6) infinite;
-  -webkit-animation: playzombie 0.5s steps(6) infinite;
-  animation: playzombie 0.5s steps(6) infinite;
-}
-/* line 187, ../sass/screen.scss */
-.guysprite.running {
-  -moz-animation: play 0.5s steps(8) infinite;
-  -webkit-animation: play 0.5s steps(8) infinite;
-  animation: play 0.5s steps(8) infinite;
-}
-
-/* line 194, ../sass/screen.scss */
-.shotsprite {
-  width: 20px;
-  height: 20px;
-  position: absolute;
-}
-/* line 198, ../sass/screen.scss */
-.shotsprite.horde {
-  bottom: 45px;
-  left: 120px;
   background-color: black;
-}
-/* line 202, ../sass/screen.scss */
-.shotsprite.horde.machine-gun {
-  background-image: url(../img/shot-machine-gun.png);
-  background-color: transparent;
-}
-
-/* line 209, ../sass/screen.scss */
-.pow {
-  position: absolute;
-  left: 0;
-  bottom: 13px;
-  width: 240px;
-  height: 150px;
-  background-image: url(../img/pow-block.png);
-  background-repeat: no-repeat;
-  background-position: left center;
-  z-index: 1000;
-}
-
-/* line 221, ../sass/screen.scss */
-.enemysprite {
-  width: 120px;
-  height: 150px;
-  position: absolute;
-}
-/* line 225, ../sass/screen.scss */
-.enemysprite.walker {
-  background-image: url(../img/zombie-anim-small-long.png);
-  background-position: left center;
-  bottom: 13px;
-  left: 100%;
-  -moz-animation: playzombielong 1s steps(12) infinite;
-  -webkit-animation: playzombielong 1s steps(12) infinite;
-  animation: playzombielong 1s steps(12) infinite;
-}
-/* line 231, ../sass/screen.scss */
-.enemysprite.walker.shot {
-  background-image: url(../img/zombie-killed.png);
-  -webkit-animation-play-state: paused;
-  animation-play-state: paused;
-}
-
-@-moz-keyframes play {
-  100% {
-    background-position: -720px;
-  }
-}
-@-webkit-keyframes play {
-  100% {
-    background-position: -720px;
-  }
-}
-@keyframes play {
-  100% {
-    background-position: -720px;
-  }
-}
-@-moz-keyframes playzombie {
-  100% {
-    background-position: -720px;
-  }
-}
-@-webkit-keyframes playzombie {
-  100% {
-    background-position: -720px;
-  }
-}
-@keyframes playzombie {
-  100% {
-    background-position: -720px;
-  }
-}
-@-moz-keyframes playzombielong {
-  100% {
-    background-position: -1440px;
-  }
-}
-@-webkit-keyframes playzombielong {
-  100% {
-    background-position: -1440px;
-  }
-}
-@keyframes playzombielong {
-  100% {
-    background-position: -1440px;
-  }
-}
-/* line 252, ../sass/screen.scss */
-.ground {
-  position: absolute;
-  width: 100%;
-  height: 20px;
-  bottom: 0;
-  left: 0;
-}
-/* line 258, ../sass/screen.scss */
-.ground.sand {
-  background-color: #966b10;
-  background-image: url(../img/ground-desert.png);
-}
-/* line 262, ../sass/screen.scss */
-.ground.forest {
-  background-color: #966b10;
-  background-image: url(../img/ground-forest.png);
-}
-
-/* line 268, ../sass/screen.scss */
-#standardlevel {
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  left: 0;
-  top: 0;
   -moz-perspective: 3000;
   -webkit-perspective: 3000;
   perspective: 3000;
 }
-/* line 275, ../sass/screen.scss */
-#standardlevel .level-timer {
+/* line 84, ../sass/screen.scss */
+#levelContainer .level-timer {
   position: absolute;
   width: 100%;
   background-color: #fb9817;
@@ -433,23 +166,23 @@ body {
   top: 0;
   height: 10px;
 }
-/* line 283, ../sass/screen.scss */
-#standardlevel .question-container {
+/* line 92, ../sass/screen.scss */
+#levelContainer .questionContainer {
   color: white;
   position: absolute;
   width: 100%;
   padding: 30px 20px 20px 20px;
 }
-/* line 288, ../sass/screen.scss */
-#standardlevel .question-container .question {
+/* line 97, ../sass/screen.scss */
+#levelContainer .questionContainer .question {
   color: white;
   text-transform: uppercase;
   font-size: 40px;
   text-align: center;
   text-shadow: black 1px 1px 0;
 }
-/* line 296, ../sass/screen.scss */
-#standardlevel .question-container .answer {
+/* line 105, ../sass/screen.scss */
+#levelContainer .questionContainer .alternative {
   padding: 10px;
   border: 1px solid white;
   margin: 15px 0 15px 0;
@@ -457,22 +190,34 @@ body {
   font-size: 20px;
   text-align: center;
   text-shadow: black 1px 1px 0;
-  -moz-transition: 0.25s;
-  -o-transition: 0.25s;
-  -webkit-transition: 0.25s;
-  transition: 0.25s;
+  -moz-transition: 0.1s;
+  -o-transition: 0.1s;
+  -webkit-transition: 0.1s;
+  transition: 0.1s;
 }
-/* line 305, ../sass/screen.scss */
-#standardlevel .question-container .answer.correct-answer {
+/* line 114, ../sass/screen.scss */
+#levelContainer .questionContainer .alternative.correct-answer {
   -moz-transform: scale(10px);
   -ms-transform: scale(10px);
   -webkit-transform: scale(10px);
   transform: scale(10px);
+  -moz-box-shadow: #5df12a 0 0 30px inset;
+  -webkit-box-shadow: #5df12a 0 0 30px inset;
+  box-shadow: #5df12a 0 0 30px inset;
 }
-/* line 308, ../sass/screen.scss */
-#standardlevel .question-container .answer.wrong-answer {
+/* line 118, ../sass/screen.scss */
+#levelContainer .questionContainer .alternative.wrong-answer {
   -moz-transform: scale(-10px);
   -ms-transform: scale(-10px);
   -webkit-transform: scale(-10px);
   transform: scale(-10px);
+  -moz-box-shadow: #f12a3c 0 0 30px inset;
+  -webkit-box-shadow: #f12a3c 0 0 30px inset;
+  box-shadow: #f12a3c 0 0 30px inset;
+}
+/* line 122, ../sass/screen.scss */
+#levelContainer .questionContainer .alternative.selected {
+  -moz-box-shadow: #f1d72a 0 0 30px inset;
+  -webkit-box-shadow: #f1d72a 0 0 30px inset;
+  box-shadow: #f1d72a 0 0 30px inset;
 }
